	* tests/test_all.sh:
	  - Added test_configure.sh to the list.
	* Makefile.am, tests/Makefile.am:
	  - Added some EXTRA_DIST files.
	  - Moved some EXTRA_DIST files from Makefile.am to tests/Makefile.am.
	* makeREADME.sh:
	  - Newly added.
	* .gitignore:
	  - Added 'CTestTestfile.cmake'.
	* configure.ac, CMakeLists.txt, README, README.md:
	  - Bumped version to 4.0.0, preparing for major update.

2017.09.06 Kentaro Fukuchi <kentaro@fukuchi.org>
	* mqrspec.h:
	  - Documentation update.
	* qrencode.[ch]:
	  - QRcode_clearCache() has been defined as a deprecated function for
	    backward compatibility.
	* qrenc.c:
	  - Copyright year updated.
	* NEWS, README, README.md:
	  - Documentation update.
	* use/config.rpath:
	  - Updated to the newer version bundled with gettext-0.19.8.1.
	* qrencode.1.in:
	  - Copyright year updated.

2017.09.02 Kentaro Fukuchi <kentaro@fukuchi.org>
	* configure.ac:
	  - Replaced AC_PROG_RANLIB with LT_INIT.

2017.08.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* CMakeLists.txt:
	  - Getopt.h is checked only by WITH_TOOLS. (merged #101) (Thanks to
	    @KangLin)
	* README, README.md:
	  - ACKNOWLEDGMENTS has been updated.

2017.03.15 Kentaro Fukuchi <kentaro@fukuchi.org>
	* ChangeLog, NEWS, TODO:
	  - Typos fixed. (merged #95) (Thanks to @jwilk)
	* README, README.md:
	  - ACKNOWLEDGMENTS has been updated.
	* README, README.md, qrenc.c, qrencode.1.in, qrencode.spec.in:
	  - The URI to the primary site has been updated. (http->https)
	* CMakeLists.txt:
	  - Add version of shared library. (merged #96) (Thanks to @vanillahsu)

2017.02.05 Kentaro Fukuchi <kentaro@fukuchi.org>
	* README, README.md:
	  - Added some notes to compile test programs. (closes #93)
	* CMakeList.txt:
	  - Added BUILD_SHARED_LIBS option with MSVC export all. (merged #92)
	    (Thanks to @vilppuvuorinen)

2017.02.03 Kentaro Fukuchi <kentaro@fukuchi.org>
	* CMakeLists.txt, cmake/FIND*.cmake, tests/CMakeLists.txt:
	  - Merged #91. (Thanks to @aleksey-nikolaev)